--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-input-slider": "^6.0.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
+    "rsuite": "^5.33.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
